# Civitas-SOL

./: .env.local.example  .gitignore  AUDIT_REPORT.md  Anchor.toml  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  V2_IMPLEMENTATION_PLAN.md  V3_HANDOFF.md  WHITEPAPER.md  brand.md  civitas_solana_whitepaper.docx  package-lock.json  package.json  pitch-deck-20260511-130252.html  pitch-deck-20260511-133730.html  pitch-deck-20260511-140101.html  rust-toolchain.toml  vercel.json
.superstack/: build-context.md
.superstack/reviews/: implementation-plan-review.html
circuits/: build_redemption.sh  voucher.circom
circuits/voucher_circom/: voucher.circom
circuits/voucher_noir/: Nargo.toml  Prover.toml  debug_vk.py  find_points.py  generate.py  help.txt
frontend/: .gitignore  grant-application.md  next.config.ts  package-lock.json  package.json  prover_inputs.txt  proxy.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: fund-deploy-modal.tsx  global-nav.tsx  providers.tsx  wallet-button.tsx
frontend/db/: supabase-waitlist.sql
frontend/lib/: auth-context.tsx  bn128-poseidon.ts  borsh-encode.ts  civitas-provider.tsx  cloak.ts  credential-store.ts  groth16-proof.ts  identity.ts  magicblock-per.ts  merkle-tree.ts  mock-store.tsx  nillion.ts  sns.ts  solana-program.ts  solana-proof.ts  solana-wallet.tsx  solana.ts  token22.ts  use-employer-session.ts  use-initialize-vault.ts  wallet-sync.tsx  zk-proof.ts
frontend/public/: pitch.html
frontend/scripts/: compute-test-vectors.mjs  generate_vk.mjs  patch-nillion.js  test-nillion.ts  (+4 more)
programs/civitas-payroll/: Cargo.toml
programs/civitas-payroll/src/: errors.rs  events.rs  lib.rs  lib.rs.bak  state.rs
programs/civitas-payroll/src/instructions/: append_commitments_chunk.rs  begin_verification.rs  claim_payment.rs  close_vault.rs  close_verification_session.rs  complete_withdrawal.rs  create_invoice.rs  deposit_usdc.rs  finalize_merkle_root.rs  initialize_vault.rs  mod.rs  pay_invoice.rs  start_payroll_run.rs
programs/civitas-payroll/src/verifier/: groth16.rs  mod.rs
scripts/: deploy.sh  groth16-setup.sh  vk-to-rust.ts
tests/: civitas.test.ts
workload/: Dockerfile  Dockerfile.onboard  auth.js  docker-compose.nilcc.yml  onboard_employee.js  package-lock.json  package.json  run_compute.js  server.js
(+98 files in other folders)
