[package]
name = "civitas-payroll"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "Civitas private on-chain payroll — Solana Anchor program"

[lib]
crate-type = ["cdylib", "lib"]
name = "civitas_payroll"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "associated_token"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-confidential-transfer-proof-extraction = { version = "0.2.0" }
light-poseidon = { version = "0.2.0", default-features = false }
# ark-bn254 used only in std (off-chain tests); BPF verifier uses lighter approach
ark-bn254 = { version = "0.4", default-features = false, optional = true }
ark-ff = { version = "0.4", default-features = false, optional = true }
ark-ec = { version = "0.4", default-features = false, optional = true }
solana-program = "=2.1.0"

[dev-dependencies]
anchor-client = "0.31.1"
solana-sdk = "=2.1.0"
tokio = { version = "1", features = ["full"] }
