[package]
name = "civitas-payroll"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "Civitas private on-chain payroll — Solana Anchor program"

[lib]
crate-type = ["cdylib", "lib"]
name = "civitas_payroll"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "associated_token"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-program = "=2.1.0"
# Native alt_bn128 syscall wrapper used by the Groth16 verifier.
solana-bn254 = "=2.1.0"
# Native Poseidon BN254 syscall (sol_poseidon) — used to compute pi_hash.
solana-poseidon = "4.0.0"

[dev-dependencies]
anchor-client = "0.31.1"
solana-sdk = "=2.1.0"
tokio = { version = "1", features = ["full"] }
